--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,7 +156,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/VRTemplate/Input/IMC_Hands.IMC_Hands
 OpenAssetsAtExit=/Game/VRTemplate/Input/IMC_Default.IMC_Default
 
@@ -558,9 +558,9 @@ InputSettings=True
 InputSettings.Bindings=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Input/Actions/IA_Grab_Left
-MRUItem1=/Game/VRTemplate/Input/IMC_Default
-MRUItem2=/Game/VRTemplate/Input/IMC_Hands
+MRUItem0=/Game/VRTemplate/Input/IMC_Default
+MRUItem1=/Game/VRTemplate/Input/IMC_Hands
+MRUItem2=/Game/VRTemplate/Input/Actions/IA_Grab_Left
 
 [AssetEditorToolkitTabLocation]
 /Game/VRTemplate/Input/Actions/IA_Grab_Left.IA_Grab_Left=0
@@ -1610,4 +1610,18 @@ HierarchicalLODOutliner.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
 
