--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,7 +156,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/VRTemplate/Input/IMC_Hands.IMC_Hands
 OpenAssetsAtExit=/Game/VRTemplate/Input/IMC_Default.IMC_Default
 
@@ -218,6 +218,25 @@ ContentBrowserTab2.SelectedCollections=
 ContentBrowserTab2.ExpandedCollections=
 ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
+ContentBrowserTab3.SourcesExpanded=True
+ContentBrowserTab3.FavoritesAreaExpanded=False
+ContentBrowserTab3.PathAreaExpanded=True
+ContentBrowserTab3.CollectionAreaExpanded=False
+ContentBrowserTab3.FavoritesSearchAreaExpanded=False
+ContentBrowserTab3.PathSearchAreaExpanded=False
+ContentBrowserTab3.CollectionSearchAreaExpanded=False
+ContentBrowserTab3.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserTab3.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab3.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserTab3.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserTab3.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserTab3.SelectedPaths=/Game
+ContentBrowserTab3.PluginFilters=
+ContentBrowserTab3.Favorites.SelectedPaths=
+ContentBrowserTab3.SelectedCollections=
+ContentBrowserTab3.ExpandedCollections=
+ContentBrowserTab3.ThumbnailSize=2
+ContentBrowserTab3.CurrentViewType=1
 
 [MRU]
 MRUItem0=/Game/VRTemplate/Maps/VRTemplateMap
